--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "compiler/crosstool-ng"]
-	path = compiler/crosstool-ng
+	path = external/compiler/crosstool-ng
 	url = https://github.com/crosstool-ng/crosstool-ng
